--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,12 @@
     <button type="submit">Search</button>
   </form>
   <h1 class="showErrors"></h1>
-  <div id="results"></div>
+  <div id="results">
+    <h2 id="resultDoctorName"></h2>
+    <h2 id="resultDoctorAddress"></h2>
+    <h2 id="resultDoctorPhoneNumber"></h2>
+    <h2 id="resultDoctorWebsite"></h2>
+    <h2 id="resultDoctorNewPatients"></h2>
   </div>
 </body>
 </html>
