--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,18 @@
     <button type="submit">Search</button>
   </form>
   <h1 class="showErrors"></h1>
+  <h1 id='noResults'></h1>
   <div id="results">
-    <h2>Doctor Name: <span id="resultDoctorName"></span></h2>
-    <h2>Address: <span id="resultDoctorAddress"></span></h2>
-    <h2>Phone Number: <span id="resultDoctorPhoneNumber"></span></h2>
-    <h2>Website: <span id="resultDoctorWebsite"></span></h2>
-    <h2>Accepting new patients: <span id="resultDoctorNewPatients"></span></h2>
+    <table id="table">
+      <tr id="header">
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Address</th>
+        <th>Phone Number</th>
+        <th>Website</th>
+        <th>Accepting New Patients?</th>
+      </tr>
+    </table>
   </div>
 </body>
 </html>
