add some simple styling

--- a/src/index.html
+++ b/src/index.html
@@ -7,27 +7,29 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Search doctors in Portland, Oregon by name or ailment</h1>
-  <form id="userSearchForm">
-    <label for="doctorName">Search by doctor name</label>
-    <input id="doctorName" type="text">
-    <label for="ailment">Search by ailment</label>
-    <input id="ailment" type="text">
-    <button type="submit">Search</button>
-  </form>
-  <h1 class="showErrors"></h1>
-  <h1 id='noResults'></h1>
-  <div id="results">
-    <table id="table">
-      <tr id="header">
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Address</th>
-        <th>Phone Number</th>
-        <th>Website</th>
-        <th>Accepting New Patients?</th>
-      </tr>
-    </table>
+  <div class="container">
+    <h1>Search doctors in Seattle, Washington by name or ailment</h1>
+    <form id="userSearchForm">
+      <label for="doctorName">Search by doctor name</label>
+      <input id="doctorName" type="text">
+      <label for="ailment">Search by ailment</label>
+      <input id="ailment" type="text">
+      <button type="submit">Search</button>
+    </form>
+    <h1 class="showErrors"></h1>
+    <h1 id='noResults'></h1>
+    <div id="results">
+      <table id="table">
+        <tr id="header">
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Address</th>
+          <th>Phone Number</th>
+          <th>Website</th>
+          <th>Accepting New Patients?</th>
+        </tr>
+      </table>
+    </div>
   </div>
 </body>
 </html>
