add location search by city and state but has to be correct format

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,12 @@
     <h1>Search doctors in Seattle, Washington by name or ailment</h1>
     <form id="userSearchForm">
       <label for="doctorName">Search by doctor name</label>
-      <input id="doctorName" type="text">
+      <input id="doctorName" type="text" placeholder="Eg: John or John Lee">
       <label for="ailment">Search by ailment</label>
-      <input id="ailment" type="text">
-      <button type="submit">Search</button>
+      <input id="ailment" type="text" placeholder="Eg: sore throat"></br>
+      <label for="location">Search by location</label>
+      <input id="location" type="text" placeholder="Eg: wa-seattle"></br>
+      <button class="btn btn-lg btn-info" type="submit">Search</button>
     </form>
     <h1 class="showErrors"></h1>
     <h1 id='noResults'></h1>
