--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
       <input id="ailment" type="text" placeholder="Eg: sore throat"></br>
       <label for="location">Search by location</label>
       <input id="location" type="text" placeholder="Eg: wa-seattle"></br>
+      <p class="hidden">Your latitude and longitude for location entered: <span id="latitudeLongitude"></span>. Please copy/paste this into location search bar
+      </p>
       <button class="btn btn-lg btn-info" type="submit">Search</button>
     </form>
     <h1 class="showErrors"></h1>
