fix api problem and finish geocode api by chaining promises, will now search by city or state or address

--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,8 @@
       <input id="doctorName" type="text" placeholder="Eg: John or John Lee">
       <label for="ailment">Search by ailment</label>
       <input id="ailment" type="text" placeholder="Eg: sore throat"></br>
-      <label for="location">Search by location</label>
-      <input id="location" type="text" placeholder="Eg: wa-seattle"></br>
-      <p class="hidden">Your latitude and longitude for location entered: <span id="latitudeLongitude"></span>. Please copy/paste this into location search bar
-      </p>
+      <label for="location">Search by city</label>
+      <input id="location" type="text" placeholder="Eg: seattle"></br>
       <button class="btn btn-lg btn-info" type="submit">Search</button>
     </form>
     <h1 class="showErrors"></h1>
